--- a/index.html
+++ b/index.html
@@ -41,17 +41,13 @@
         </div>
         
         <div class="col-md-4 col-sm-12 col-xs-12">
-          <span>&#128076;</span>
-          <span>&#128077;</span>
-          <span>&#9996;</span>
-          <span>&#9994;</span>
-          <span>&#128079;</span>
-          <span>&#129304;</span>
-          <span>&#128075;</span>
-          <br><br>
+          
             <label>Prediction - </label>
-          <p class="gesture_name" id="result_gesture_name"></p>
-          <p class="emoji" id="result_emoji"></p> 
+          <p class="emotion_name" id="result_emotion_name"></p>
+          <p class="emoji" id="update_emoji"></p>
+          <label>Prediction 2 -</label>
+          <p class="emotion_name" id="result_emotion_name2"></p>
+          <p class="emoji" id="update_emoji2"></p>
         </div>
   
         <div class="col-md-4 col-sm-12 col-xs-12">
